analytics-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-deployment
  namespace: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: analytics-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi" 
              cpu: "250m"   
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8005
          startupProbe:
            httpGet: { path: /health, port: 8005 }
            periodSeconds: 5
            failureThreshold: 6
