analytics-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8005
